--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -219,6 +219,11 @@ html, body {
     font-size: 16px;
 }
 
+.navbar-options-create {
+    color: #fbb4d2;
+    font-size: 16px;
+}
+
 .cancel-button {
     color: $text-color;
 }
