--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -1,7 +1,7 @@
 @use 'node_modules/wt-frontend/build/global/theme' with (
     $primary-color: #ffc800,
     $background-color: rgb(64, 69, 78),//#d9d6cc,
-    $navbar-background-color: #353a44,//rgb(64, 69, 78),
+     $navbar-background-color:rgb(0, 0, 0),// #353a44,//rgb(64, 69, 78),
     $sidebar-background-color: #2b2e36,//#353a44,
     $text-color: #e9edf0,
     $modal-background: rgb(64, 69, 78),
@@ -211,12 +211,15 @@ html, body {
 
 .modal-header {
     color: $text-color;
-    font-size: 28px;
+    font-size: 15px;
+    background-color: red;
+    text-align: center;
 }
 
 .navbar-options {
     color: $text-color;
     font-size: 16px;
+    
 }
 
 .navbar-options-create {
