dedit works perfectly

--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -41,7 +41,7 @@ html {
 }
 
 .mainContent{
-    background-color: #dbbdf9;;
+    background-color: #6F0B90;;
     overflow: scroll;
 }
 .list-item-active{
