--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -14,13 +14,16 @@ html {
    
 // }
 
+:visited{
+    color:black;
+}
 .container-secondary {
     width: 100%;
     height: 100%;
     display: flex;
     background-color: blueviolet;
     justify-content: center;
-    color: white;
+    color: black;
     width: 600px;
     height: 500px;
     margin: 0 auto;
@@ -41,7 +44,7 @@ html {
 }
 
 .mainContent{
-    background-color: #6F0B90;;
+    background-color: #a869bd;;
     overflow: scroll;
 }
 .list-item-active{
