--- a/client/src/css/ElementsLayout.scss
+++ b/client/src/css/ElementsLayout.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: gray;
+    background-color: black;
     justify-content: center;
     color: black;
     width: 1400px;
@@ -22,4 +22,41 @@
 }
 .plusButton{
     color: green;
+}
+
+.container-details-secondary{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: gray;
+    justify-content: center;
+    color: black;
+    // width: 1400px;
+    // height: 700px;
+    // margin: 0 auto;
+    // margin-top: 10px;
+    // border: solid;
+     border-color: black;
+    //margin-right: 400px;
+    
+}
+
+.lowerNavBar{
+    display: inline-flex;
+    width: 1352px;
+    justify-content: space-between;
+    // padding-right:1000px;
+    // padding-left: 100px;
+    gap: 10px;
+
+}
+.setOverFlow{
+    overflow: scroll;
+    
+}
+.buttonX{
+    background-color: gray;
+    outline: none;
+    border: none;
+    
 }
