--- a/client/src/css/ElementsLayout.scss
+++ b/client/src/css/ElementsLayout.scss
@@ -60,3 +60,28 @@
     border: none;
     
 }
+
+
+.leftbox{
+    position: absolute;
+    top: 80px;
+    left:   200px;
+    height: 600px;
+    width: 500px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: red;
+}
+.rightbox{
+    position: absolute;
+    top: 80px;
+    right:200px;
+    height: 600px;
+    width: 500px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: red;
+    font-size: 25px;
+    overflow: scroll;
+
+}
