--- a/client/src/css/ElementsLayout.scss
+++ b/client/src/css/ElementsLayout.scss
@@ -82,6 +82,23 @@
     border-width: 1px;
     border-color: red;
     font-size: 25px;
-    overflow: scroll;
+    overflow-y: scroll;
 
+}
+
+.addButtonnnn{
+    position: absolute;
+    top:690px;
+    right:200px;
+    width:45px;
+    height: 45px;
+
+}
+.inputtttttttt{
+    text-align: center;
+    position: absolute;
+    top:690px;
+    right:300px;
+    width:150px;
+    height: 45px
 }
